# maintenance-man

./: .gitignore  README.md  TODO  TODO.md  pyproject.toml
.claude/plans/: BACKLOG.md  feat-activity-tracking-DESIGN.md  feat-activity-tracking-PLAN.md  feat-config-system-DESIGN.md  feat-config-system-PLAN.md  feat-dep-next-DESIGN.md  feat-dep-next-PLAN.md  feat-deploy-support-DESIGN.md  feat-deploy-support-PLAN.md  feat-make-test-project-DESIGN.md  feat-make-test-project-PLAN.md  feat-mass-deploy-DESIGN.md  feat-mass-deploy-PLAN.md  feat-mass-update-DESIGN.md  feat-mass-update-PLAN.md  feat-scan-skip-dirs-DESIGN.md  feat-scan-skip-dirs-PLAN.md  feat-test-command-DESIGN.md  feat-test-command-PLAN.md  feat-todo-command-DESIGN.md  feat-todo-command-PLAN.md  feat-todo-command-REVIEW.md  feat-vuln-scanning-DESIGN.md  feat-vuln-scanning-PLAN.md  flatten-test-config-DESIGN.md  main-DESIGN.md  refactor-config-layout-PLAN.md  scaffolding-DESIGN.md  scaffolding-PLAN.md
src/maintenance_man/: __init__.py  cli.py  config.py  dependency_age.py  deployer.py  env.py  outdated.py  scanner.py  updater.py  uv_dependencies.py  vcs.py
src/maintenance_man/models/: __init__.py  activity.py  config.py  scan.py
tests/: conftest.py  test_activity.py  test_build_cli.py  test_cli.py  test_config.py  test_dependency_age.py  test_deploy_cli.py  test_deployer.py  test_list.py  test_models.py  test_models_config.py  test_models_scan.py  test_outdated.py  test_resolve_cli.py  test_scan_cli.py  test_scanner.py  test_sync_cli.py  test_test_cli.py  test_update_cli.py  test_updater.py  test_vcs.py
tests/fixtures/: test-config.toml
tests/fixtures/projects/dirty-bun/: package.json
tests/fixtures/projects/dirty-mvn/: pom.xml
tests/fixtures/projects/dirty-uv/: pyproject.toml
tests/fixtures/vulnerable-project/: requirements.txt
