[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maintenance-man"
version = "0.1.0"
description = "Config-driven CLI for routine software project maintenance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.0",
]

[project.scripts]
mm = "maintenance_man.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
