[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maintenance-man"
version = "0.1.0"
description = "Config-driven CLI for routine software project maintenance"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cyclopts==4.6.0",
    "packaging>=24.0",
    "pydantic>=2.0",
    "rich==14.3.3",
]

[project.scripts]
mm = "maintenance_man.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests with real external web-dependencies",
    "component: tests that require Docker or full service stack",
]
addopts = "-m 'not integration and not component'"
